ci: Update SDK to v0.3.58
