# opencode-sdk/src/models/log_level.rs
@@ -1,45 +1,0 @@
-/*
- * opencode
- *
- * opencode api
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- * Generated by: https://openapi-generator.tech
- */
-
-use crate::models;
-use serde::{Deserialize, Serialize};
-
-/// LogLevel : Log level
-/// Log level
-#[derive(Clone, Copy, Debug, Eq, PartialEq, Ord, PartialOrd, Hash, Serialize, Deserialize)]
-pub enum LogLevel {
-    #[serde(rename = "DEBUG")]
-    Debug,
-    #[serde(rename = "INFO")]
-    Info,
-    #[serde(rename = "WARN")]
-    Warn,
-    #[serde(rename = "ERROR")]
-    Error,
-
-}
-
-impl std::fmt::Display for LogLevel {
-    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
-        match self {
-            Self::Debug => write!(f, "DEBUG"),
-            Self::Info => write!(f, "INFO"),
-            Self::Warn => write!(f, "WARN"),
-            Self::Error => write!(f, "ERROR"),
-        }
-    }
-}
-
-impl Default for LogLevel {
-    fn default() -> LogLevel {
-        Self::Debug
-    }
-}
-
