# opencode-sdk/src/models/mod.rs
@@ -36,6 +36,8 @@ pub mod config_provider_value_models_value_cost;
 pub use self::config_provider_value_models_value_cost::ConfigProviderValueModelsValueCost;
 pub mod config_provider_value_models_value_limit;
 pub use self::config_provider_value_models_value_limit::ConfigProviderValueModelsValueLimit;
+pub mod config_provider_value_options;
+pub use self::config_provider_value_options::ConfigProviderValueOptions;
 pub mod error;
 pub use self::error::Error;
 pub mod event;
@@ -46,6 +48,8 @@ pub mod event_file_watcher_updated_properties;
 pub use self::event_file_watcher_updated_properties::EventFileWatcherUpdatedProperties;
 pub mod event_file_watcher_updated_properties_event;
 pub use self::event_file_watcher_updated_properties_event::EventFileWatcherUpdatedPropertiesEvent;
+pub mod event_ide_installed_properties;
+pub use self::event_ide_installed_properties::EventIdeInstalledProperties;
 pub mod event_installation_updated_properties;
 pub use self::event_installation_updated_properties::EventInstallationUpdatedProperties;
 pub mod event_lsp_client_diagnostics_properties;
@@ -60,6 +64,8 @@ pub mod event_period_file_period_edited;
 pub use self::event_period_file_period_edited::EventPeriodFilePeriodEdited;
 pub mod event_period_file_period_watcher_period_updated;
 pub use self::event_period_file_period_watcher_period_updated::EventPeriodFilePeriodWatcherPeriodUpdated;
+pub mod event_period_ide_period_installed;
+pub use self::event_period_ide_period_installed::EventPeriodIdePeriodInstalled;
 pub mod event_period_installation_period_updated;
 pub use self::event_period_installation_period_updated::EventPeriodInstallationPeriodUpdated;
 pub mod event_period_lsp_period_client_period_diagnostics;
@@ -94,6 +100,14 @@ pub mod file;
 pub use self::file::File;
 pub mod file_part;
 pub use self::file_part::FilePart;
+pub mod file_part_input;
+pub use self::file_part_input::FilePartInput;
+pub mod file_part_source;
+pub use self::file_part_source::FilePartSource;
+pub mod file_part_source_text;
+pub use self::file_part_source_text::FilePartSourceText;
+pub mod file_source;
+pub use self::file_source::FileSource;
 pub mod get_config_providers_200_response;
 pub use self::get_config_providers_200_response::GetConfigProviders200Response;
 pub mod get_file_200_response;
@@ -104,12 +118,8 @@ pub mod keybinds_config;
 pub use self::keybinds_config::KeybindsConfig;
 pub mod layout_config;
 pub use self::layout_config::LayoutConfig;
-pub mod log_level;
-pub use self::log_level::LogLevel;
 pub mod model_match;
 pub use self::model_match::Match;
-pub mod match_path;
-pub use self::match_path::MatchPath;
 pub mod match_submatches_inner;
 pub use self::match_submatches_inner::MatchSubmatchesInner;
 pub mod mcp_local_config;
@@ -146,6 +156,8 @@ pub mod post_session_by_id_message_request_parts_inner;
 pub use self::post_session_by_id_message_request_parts_inner::PostSessionByIdMessageRequestPartsInner;
 pub mod post_session_by_id_summarize_request;
 pub use self::post_session_by_id_summarize_request::PostSessionByIdSummarizeRequest;
+pub mod post_tui_append_prompt_request;
+pub use self::post_tui_append_prompt_request::PostTuiAppendPromptRequest;
 pub mod provider;
 pub use self::provider::Provider;
 pub mod provider_auth_error;
@@ -174,8 +186,12 @@ pub mod symbol;
 pub use self::symbol::Symbol;
 pub mod symbol_location;
 pub use self::symbol_location::SymbolLocation;
+pub mod symbol_source;
+pub use self::symbol_source::SymbolSource;
 pub mod text_part;
 pub use self::text_part::TextPart;
+pub mod text_part_input;
+pub use self::text_part_input::TextPartInput;
 pub mod text_part_time;
 pub use self::text_part_time::TextPartTime;
 pub mod tool_part;
