# opencode-sdk/src/models/text_part_input.rs
@@ -1,0 +1,39 @@
+/*
+ * opencode
+ *
+ * opencode api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct TextPartInput {
+    #[serde(rename = "id", skip_serializing_if = "Option::is_none")]
+    pub id: Option<String>,
+    #[serde(rename = "type")]
+    pub r#type: String,
+    #[serde(rename = "text")]
+    pub text: String,
+    #[serde(rename = "synthetic", skip_serializing_if = "Option::is_none")]
+    pub synthetic: Option<bool>,
+    #[serde(rename = "time", skip_serializing_if = "Option::is_none")]
+    pub time: Option<Box<models::TextPartTime>>,
+}
+
+impl TextPartInput {
+    pub fn new(r#type: String, text: String) -> TextPartInput {
+        TextPartInput {
+            id: None,
+            r#type,
+            text,
+            synthetic: None,
+            time: None,
+        }
+    }
+}
+
